--- a/nodesnim/core/exceptions.html
+++ b/nodesnim/core/exceptions.html
@@ -100,10 +100,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#MainSceneNotLoadedError"
-    title="MainSceneNotLoadedError = object of ValueError"><wbr />Main<wbr />Scene<wbr />Not<wbr />Loaded<wbr />Error<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#WindowNotCreatedError"
-    title="WindowNotCreatedError = object of ValueError"><wbr />Window<wbr />Not<wbr />Created<wbr />Error<span class="attachedType"></span></a></li>
+      <li><a class="reference" href="#SceneError"
+    title="SceneError = object of ValueError"><wbr />Scene<wbr />Error<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#WindowError"
+    title="WindowError = object of ValueError"><wbr />Window<wbr />Error<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -118,15 +118,15 @@ function main() {
   <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
-<a id="MainSceneNotLoadedError"></a>
-<dt><pre><a href="exceptions.html#MainSceneNotLoadedError"><span class="Identifier">MainSceneNotLoadedError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
+<a id="SceneError"></a>
+<dt><pre><a href="exceptions.html#SceneError"><span class="Identifier">SceneError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="WindowNotCreatedError"></a>
-<dt><pre><a href="exceptions.html#WindowNotCreatedError"><span class="Identifier">WindowNotCreatedError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
+<a id="WindowError"></a>
+<dt><pre><a href="exceptions.html#WindowError"><span class="Identifier">WindowError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
 <dd>
 
 
@@ -142,7 +142,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:05 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-11 12:58:38 UTC</small>
       </div>
     </div>
   </div>
