--- a/nodesnim/core/polygon2.html
+++ b/nodesnim/core/polygon2.html
@@ -127,8 +127,8 @@ function main() {
     title="contains(self: Polygon2Ref; vec2: Vector2Obj): bool"><wbr />contains<span class="attachedType">Polygon2Ref</span></a></li>
   <li><a class="reference" href="#intersects%2CPolygon2Ref%2CPolygon2Ref"
     title="intersects(self, other: Polygon2Ref): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
-  <li><a class="reference" href="#intersects%2CPolygon2Ref%2CRect2Ref"
-    title="intersects(self: Polygon2Ref; r: Rect2Ref): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
+  <li><a class="reference" href="#intersects%2CPolygon2Ref%2CRect2Obj"
+    title="intersects(self: Polygon2Ref; r: Rect2Obj): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
   <li><a class="reference" href="#intersects%2CPolygon2Ref%2CCircleRef"
     title="intersects(self: Polygon2Ref; circle: CircleRef): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
   <li><a class="reference" href="#move%2CPolygon2Ref%2CVector2Obj"
@@ -216,8 +216,8 @@ Returns true, if point <tt class="docutils literal"><span class="pre">vec2</span
 Returns true, if two polygons intersect.
 
 </dd>
-<a id="intersects,Polygon2Ref,Rect2Ref"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#intersects%2CPolygon2Ref%2CRect2Ref"><span class="Identifier">intersects</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="polygon2.html#Polygon2Ref"><span class="Identifier">Polygon2Ref</span></a><span class="Other">;</span> <span class="Identifier">r</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="intersects,Polygon2Ref,Rect2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#intersects%2CPolygon2Ref%2CRect2Obj"><span class="Identifier">intersects</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="polygon2.html#Polygon2Ref"><span class="Identifier">Polygon2Ref</span></a><span class="Other">;</span> <span class="Identifier">r</span><span class="Other">:</span> <a href="rect2.html#Rect2Obj"><span class="Identifier">Rect2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns true, if rect intersect with polygon.
@@ -247,7 +247,7 @@ Moves polygon.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-10 16:27:09 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-11 12:58:43 UTC</small>
       </div>
     </div>
   </div>
