--- a/nodesnim/nodes3d/geometry_instance.html
+++ b/nodesnim/nodes3d/geometry_instance.html
@@ -108,11 +108,12 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#GeometryType"
     title="GeometryType {.pure.} = enum
-  GEOMETRY_CUBE"><wbr />Geometry<wbr />Type<span class="attachedType"></span></a></li>
+  GEOMETRY_CUBE, GEOMETRY_SPHERE"><wbr />Geometry<wbr />Type<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#GeometryInstanceObj"
     title="GeometryInstanceObj = object of Node3DObj
   geometry*: GeometryType
-  color*: ColorRef"><wbr />Geometry<wbr />Instance<wbr />Obj<span class="attachedType"></span></a></li>
+  color*: ColorRef
+  radius*: float"><wbr />Geometry<wbr />Instance<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#GeometryInstanceRef"
     title="GeometryInstanceRef = ref GeometryInstanceObj"><wbr />Geometry<wbr />Instance<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -121,8 +122,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#GeometryInstance%2Cstring"
-    title="GeometryInstance(name: string = &quot;GeometryInstance&quot;): GeometryInstanceRef"><wbr />Geometry<wbr />Instance<span class="attachedType">GeometryInstanceRef</span></a></li>
+      <li><a class="reference" href="#GeometryInstance%2Cstring%2CGeometryType"
+    title="GeometryInstance(name: string = &quot;GeometryInstance&quot;;
+                 geometry: GeometryType = GEOMETRY_CUBE): GeometryInstanceRef"><wbr />Geometry<wbr />Instance<span class="attachedType">GeometryInstanceRef</span></a></li>
 
   </ul>
 </li>
@@ -152,7 +154,7 @@ function main() {
 <dl class="item">
 <a id="GeometryType"></a>
 <dt><pre><a href="geometry_instance.html#GeometryType"><span class="Identifier">GeometryType</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">pure</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">enum</span>
-  <span class="Identifier">GEOMETRY_CUBE</span></pre></dt>
+  <span class="Identifier">GEOMETRY_CUBE</span><span class="Other">,</span> <span class="Identifier">GEOMETRY_SPHERE</span></pre></dt>
 <dd>
 
 
@@ -162,6 +164,7 @@ function main() {
 <dt><pre><a href="geometry_instance.html#GeometryInstanceObj"><span class="Identifier">GeometryInstanceObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="node3d.html#Node3DObj"><span class="Identifier">Node3DObj</span></a>
   <span class="Identifier">geometry</span><span class="Operator">*</span><span class="Other">:</span> <a href="geometry_instance.html#GeometryType"><span class="Identifier">GeometryType</span></a>
   <span class="Identifier">color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
+  <span class="Identifier">radius</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
 </pre></dt>
 <dd>
 
@@ -180,8 +183,9 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="GeometryInstance,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#GeometryInstance%2Cstring"><span class="Identifier">GeometryInstance</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;GeometryInstance&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="geometry_instance.html#GeometryInstanceRef"><span class="Identifier">GeometryInstanceRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="GeometryInstance,string,GeometryType"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#GeometryInstance%2Cstring%2CGeometryType"><span class="Identifier">GeometryInstance</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;GeometryInstance&quot;</span><span class="Other">;</span>
+                     <span class="Identifier">geometry</span><span class="Other">:</span> <a href="geometry_instance.html#GeometryType"><span class="Identifier">GeometryType</span></a> <span class="Other">=</span> <span class="Identifier">GEOMETRY_CUBE</span><span class="Other">)</span><span class="Other">:</span> <a href="geometry_instance.html#GeometryInstanceRef"><span class="Identifier">GeometryInstanceRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -216,7 +220,7 @@ This method uses in the <tt class="docutils literal"><span class="pre">window.ni
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-11 12:59:52 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-11 13:00:19 UTC</small>
       </div>
     </div>
   </div>
