--- a/nodesnim/nodescontrol/popup.html
+++ b/nodesnim/nodescontrol/popup.html
@@ -107,7 +107,7 @@ function main() {
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#PopupObj"
-    title="PopupObj = object of ControlRef"><wbr />Popup<wbr />Obj<span class="attachedType"></span></a></li>
+    title="PopupObj = object of ControlObj"><wbr />Popup<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#PopupRef"
     title="PopupRef = ref PopupObj"><wbr />Popup<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -152,7 +152,7 @@ function main() {
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
 <a id="PopupObj"></a>
-<dt><pre><a href="popup.html#PopupObj"><span class="Identifier">PopupObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlRef"><span class="Identifier">ControlRef</span></a></pre></dt>
+<dt><pre><a href="popup.html#PopupObj"><span class="Identifier">PopupObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlObj"><span class="Identifier">ControlObj</span></a></pre></dt>
 <dd>
 
 
@@ -226,7 +226,7 @@ Duplicates Popup object and create a new Popup.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-11 12:59:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-12 13:25:42 UTC</small>
       </div>
     </div>
   </div>
